<resources>
    <string name="app_name">The Play Book</string>
    <string name="title_play_detail">Play Detail</string>
    <string name="beginner">Beginner</string>
    <string name="amateur">Amateur</string>
    <string name="warrior">Weekend Warrior</string>
    <string name="advanced">Advanced</string>
    <string name="success_rate">Success Rate</string>
    <string name="attracts">Attracts</string>
    <string name="requirements">Requirements</string>
    <string name="bummers">Bummers</string>
    <string name="prep_time">Prep Time</string>
    <string name="search">Search</string>
    <string name="search_plays">Search Plays</string>
    <string name="no_result">No Result</string>
    <string name="share">Share</string>
    <string name="share_play">Share play with</string>
</resources>
